--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -23,18 +23,70 @@ function getParameterByName(name, url) {
 
 
 
-
 $(document).ready(function(){
   var query = getParameterByName('q')
   var tweetList = [];
   var nextTweetUrl;
 
+  $(document.body).on("click",".retweetBtn",function(e){
+    e.preventDefault()
+    console.log("clicked")
+    var url = "/api" + $(this).attr("href")
+    $.ajax({
+      method: "GET",
+      url: url,
+      success: function(data) {
+        console.log(data)
+        attachTweet(data,true,true)
+        updateHashLinks()
+      },
+      error: function(data){
+        console.log("error");
+        console.log(data);
+      }
+    })
+  })
 
-  function attachTweet(tweetValue, prepend){
+  function updateHashLinks(){
+    $(".media-body").each(function(data){
+        var hashtagRegex = /(^|\s)#([\w\d-]+)/g
+        var usernameRegex = /(^|\s)@([\w\d-]+)/g
+        var currentHtml = $(this).html()
+        var newText;
+        newText = currentHtml.replace(hashtagRegex, "$1<a href='/tags/$2/'>#$2</a>")
+        $(this).html(newText)
+
+        newText =  currentHtml.replace(usernameRegex, "$1@<a href='/$2/'>$2</a>")
+        $(this).html(newText)
+        
+    })
+  }
+
+  function attachTweet(tweetValue, prepend, retweet){
       var dateDisplay = tweetValue.date_display;
       var tweetContent = tweetValue.content;
       var tweetUser = tweetValue.user;
-      var tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | " + "<a href='#'>View</a>" + "</div></div><hr/>"
+      var tweetFormattedHtml;
+      if(retweet && tweetValue.parent)
+      {
+        var mainTweet = tweetValue.parent
+        tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'><Retweet via" +
+        tweetUser.username + " on " + dateDisplay + "<br/>" + mainTweet.content + 
+        "</span> <br/> via <a href='" + mainTweet.user.url + "'>" + 
+        mainTweet.user.username + "</a> | " + 
+        "<a href='/tweet/" + tweetValue.id + "'>View</a> | " + 
+        "<a class = 'retweet' href='/tweet/" + tweetValue.id + 
+        "/retweet/'>Retweet</a>" +"</div></div><hr/>"
+
+      }
+      else 
+      {
+        tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + 
+        tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + 
+        tweetUser.username + "</a> | " + dateDisplay + " | " + "<a href='/tweet/" + 
+        tweetValue.id + "'>View</a> | "+ "<a class='retweetBtn' href='/tweet/" +
+        tweetValue.id + "/retweet/'>Retweet</a>" + "</div></div><hr/>"
+      }
       if (prepend==true){
         $("#tweet-container").prepend(tweetFormattedHtml)
       } else {
@@ -49,7 +101,11 @@ $(document).ready(function(){
       // tweets exist, parse & display them
      $.each(tweetList, function(key, value){
           var tweetKey = key;
-          attachTweet(value)
+          if (value.parent) {
+            attachTweet(value, false, true)
+          } else{
+            attachTweet(value)
+        }
       })
     }
   }
@@ -77,7 +133,7 @@ $(document).ready(function(){
           $("#loadmore").css("display", "none")
         }
         parseTweets()
-       
+        updateHashLinks()
       },
       error: function(data){
         console.log("error")
@@ -136,6 +192,7 @@ $(document).ready(function(){
           success: function(data){
             this_.find("input[type=text], textarea").val("")
             attachTweet(data, true)
+            updateHashLinks()
            
           },
           error: function(data){
@@ -146,18 +203,11 @@ $(document).ready(function(){
         })
       }  else {
         console.log("Cannot send, tweet too long.")
-    }
-
-
-
-      
+    }      
   })
 
-
-
-
-
 });
+
 </script>
 {% endblock script %}
 
@@ -190,4 +240,4 @@ $(document).ready(function(){
         </div>
     </div>
 
-{% endblock content %}
+{% endblock content %} 
