--- a/accounts/templates/accounts/user_detail.html
+++ b/accounts/templates/accounts/user_detail.html
@@ -1,6 +1,13 @@
 
 {% extends "base.html" %}
 
+{% block script %}
+    <script type="text/javascript">    $(document).ready(function(){
+          loadTweetContainer("tweet-container");
+        });
+    </script>
+
+{% endblock script %}
 
 {% block content %}
 <div class='row'>
@@ -12,16 +19,7 @@
             <a class='btn btn-link' href='{{ object.profile.get_follow_url }}'>
                     {% if following %}Unfollow{% else %}Follow{% endif %}
                 </a>
-        </p>
-    </div>
-    <div class='col-sm-9 col-xs-12'>
-         <h1>Tweets</h1>
-         {% for tweet in object.tweet_set.all %}
-         {{ tweet }}<br/>
-
-         {% endfor %}
-
-         <hr/>
+                 <hr/>
           <h1>Following <small>{{ object.profile.get_following.count }}</small></h1>
 
              {% for user in object.profile.get_following %}
@@ -37,6 +35,19 @@
              {% empty %}
              <h4>Not followed by any users</h4>
              {% endfor %}
+
+
+
+        </p>
+
+    </div>
+    <div class='col-sm-9 col-xs-12'>
+        <h1>Tweets</h1>
+        <div id='tweet-container' date-url='api/{{ object.username }}/tweet/'>
+
+
+          </div>
+          <a href='#' id='loadmore'>Load More Tweets</a>
 
 
      </div>
