completed reply button + lec 66

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <body>
     {% include "navbar.html" %}
     <div class='container'>
-      
+
       {% block content %}
       {% endblock content %}
 
@@ -53,7 +53,7 @@ function loadTweetContainer(tweetContainerID){
   var query = getParameterByName('q')
   var tweetList = [];
   var nextTweetUrl;
-  
+
   var tweetContainer;
   if (tweetContainerID){
     tweetContainer = $("#" + tweetContainerID)
@@ -62,31 +62,28 @@ function loadTweetContainer(tweetContainerID){
   }
   var initialURL = tweetContainer.attr("data-url") || "/api/tweet/";
   console.log(initialURL)
-
-  $(document.body).on("click",".tweet-like",function(e){
-    e.preventDefault()
-    var this_ = $(this)
-    var tweetId = this_.attr("data-id")
-    var likedUrl = '/api/tweet/' + tweetId +'/like/'
-    //this_.text("Liked")
-    $.ajax({
-      method: "GET",
-      url: likedUrl,
-      success: function(data){
-        if(data.Liked) {
-          this_text("liked")
+  $(document.body).on("click", ".tweet-like", function(e){
+      e.preventDefault()
+      var this_ = $(this)
+      var tweetId = this_.attr("data-id")
+      var likedUrl = '/api/tweet/' + tweetId + "/like/"
+      // this_.text("Liked")
+      $.ajax({
+        method:"GET",
+        url: likedUrl,
+        success: function(data){
+          if (data.liked){
+            this_.text("Liked")
+          } else {
+            this_.text("Unliked")
+          }
+        },
+        error: function(data){
+          console.log("error")
+          console.log(data)
         }
-        else {
-          this_.text("Like")
-        }
-      },
-      error: function(data){
-        console.log(data)
-        console.log(error)
-      }
-    })
+      })
   })
-
   $(document.body).on("click", ".retweetBtn", function(e){
     e.preventDefault()
     console.log("clicked")
@@ -96,12 +93,12 @@ function loadTweetContainer(tweetContainerID){
       url: url,
       success: function (data) {
         console.log(data)
-        // if username is in the API path... let's ignore 
+        // if username is in the API path... let's ignore
         if (initialURL == "/api/tweet/") {
           attachTweet(data, true, true)
           updateHashLinks()
         }
-        
+
       },
       error: function(data){
         console.log("error")
@@ -120,20 +117,35 @@ function loadTweetContainer(tweetContainerID){
         $(this).html(newText)
     })
   }
-  function attachTweet(tweetValue, prepend, retweet){
-      var dateDisplay = tweetValue.date_display;
-      var tweetContent = tweetValue.content;
-      var tweetUser = tweetValue.user;
-      var tweetFormattedHtml;
-      if (retweet && tweetValue.parent){
-         // retweet
-        var mainTweet = tweetValue.parent
-         tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\"><span class='grey-color'>Retweet via " + tweetUser.username +" on " + dateDisplay + "</span><br/>"+ mainTweet.content + "<br/> via <a href='" + mainTweet.user.url + "'>" + mainTweet.user.username + "</a> | " + mainTweet.date_display + " | " + "<a href='/tweet/" + mainTweet.id + "'>View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'>Retweet</a>" + " | <a href='#'  class='tweet-like' data-id="+ tweetValue.id +"> Like </a></div></div><hr/>"
-      } else {
-        // fresh tweet
-         tweetFormattedHtml = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "<br/> via <a href='" + tweetUser.url + "'>" + tweetUser.username + "</a> | " + dateDisplay + " | " + "<a href='/tweet/" + tweetValue.id + "'>View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'>Retweet</a>" + " | <a href='#'  class='tweet-like' data-id="+ tweetValue.id +"> Like </a></div></div><hr/>"
+  function formatTweet(tweetValue) {
+
+      var preContent;
+      var container;
+      var tweetContent;
+      var isReply = tweetValue.reply;
+      if (tweetValue.parent && !isReply) {
+        // there is a retwet
+        tweetValue = tweetValue.parent
+         preContent = "<span class='grey-color'>Retweet via " + tweetValue.user.username +" on " + tweetValue.date_display + "</span><br/>"
+      } else if (tweetValue.parent && isReply) {
+         preContent = "<span class='grey-color'>Reply to @" + tweetValue.parent.user.username +  "</span><br/>"
       }
-      
+      var verb = 'Like'
+      if (tweetValue.did_like){
+          verb = 'Unlike'
+      }
+
+      tweetContent = tweetValue.content + "<br/> via <a href='" + tweetValue.user.url + "'>" + tweetValue.user.username + "</a> | " + tweetValue.date_display + " | " + "<a href='/tweet/" + tweetValue.id + "'>View</a> | " + "<a class='retweetBtn' href='/tweet/" + tweetValue.id + "/retweet/'>Retweet</a>" + " | <a href='#' class='tweet-like' data-id=" + tweetValue.id + ">" + verb + " (" + tweetValue.likes + ")</a>" + " | <a href='#' class='tweet-reply' data-id=" + tweetValue.id + ">Reply</a>"
+      if (preContent){
+           container= "<div class=\"media\"><div class=\"media-body\">" + preContent + tweetContent + "</div></div><hr/>"
+      } else {
+           container = "<div class=\"media\"><div class=\"media-body\">" + tweetContent + "</div></div><hr/>"
+      }
+
+       return container
+  }
+  function attachTweet(tweetValue, prepend, retweet){
+      tweetFormattedHtml = formatTweet(tweetValue)
       if (prepend==true){
         tweetContainer.prepend(tweetFormattedHtml)
       } else {
@@ -152,7 +164,7 @@ function loadTweetContainer(tweetContainerID){
           } else {
             attachTweet(value)
           }
-          
+
       })
     }
   }
@@ -180,7 +192,7 @@ function loadTweetContainer(tweetContainerID){
         }
         parseTweets()
         updateHashLinks()
-       
+
       },
       error: function(data){
         console.log("error")
@@ -196,7 +208,7 @@ function loadTweetContainer(tweetContainerID){
       }
       // load more items
   })
-  
+
   var charsStart = 140;
   var charsCurrent = 0;
   $("#tweet-form").append("<span id='tweetCharsLeft'>" + charsStart + "</span>")
@@ -232,7 +244,7 @@ function loadTweetContainer(tweetContainerID){
             this_.find("input[type=text], textarea").val("")
             attachTweet(data, true)
             updateHashLinks()
-           
+
           },
           error: function(data){
             console.log("error")
@@ -243,7 +255,7 @@ function loadTweetContainer(tweetContainerID){
       }  else {
         console.log("Cannot send, tweet too long.")
     }
-      
+
   })
 }
     </script>
@@ -259,10 +271,10 @@ function loadTweetContainer(tweetContainerID){
             searchQuery =  $(this).val()
             clearTimeout(typingTimer)
             typingTimer = setTimeout(doneSearchTyping, doneInterval)
-            
+
         })
          searchInput.keydown(function(event){
-            clearTimeout(typingTimer)  
+            clearTimeout(typingTimer)
         })
         function doneSearchTyping(){
           if (searchQuery){
