--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -17,7 +17,7 @@ $(document).ready(function(){
 
 {% block content %}
 
-   
+
     <div class='row'>
         <div class='col-sm-3 col-xs-12' style='background-color:red;'>
         <h1>{{ request.user }}</h1>
@@ -25,15 +25,15 @@ $(document).ready(function(){
         <div class='col-sm-9 '>
              {% if not request.GET.q %}
                 <div class=''>
-                    
-                    {% include "tweets/form.html" with form=create_form action_url=create_url btn_title='Tweet' form_id='tweet-form' %}
+
+                    {% include "tweets/form.html" with form=create_form action_url=create_url btn_title='Tweet' form_class='tweet-form' %}
 
                 </div>
                 <hr/>
             {% endif %}
 
           <div id='tweet-container' data-url='/api/tweet/'>
-            
+
           </div>
           <a href='#' id='loadmore'>Load More Tweets</a>
 
