--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
     if (!results[2]) return '';
     return decodeURIComponent(results[2].replace(/\+/g, " "));
 }
-function loadTweetContainer(tweetContainerID){
+function loadTweetContainer(tweetContainerID, fetchOneId){
   var query = getParameterByName('q')
   var tweetList = [];
   var nextTweetUrl;
@@ -218,7 +218,35 @@ function loadTweetContainer(tweetContainerID){
       }
     })
   }
-  fetchTweets()
+  function fetchSingle(fetchOneId){
+    var fecthDetailUrl = '/api/tweet/' + fetchOneId + '/'
+    $.ajax({
+      url: fecthDetailUrl,
+      method: "GET",
+      success: function(data){
+         console.log(data)
+        tweetList = data.results
+        // if (data.next){
+        //   nextTweetUrl = data.next
+        // } else {
+        //   $("#loadmore").css("display", "none")
+        // }
+        parseTweets()
+        updateHashLinks()
+
+      },
+      error: function(data){
+        console.log("error")
+        console.log(data)
+      }
+    })
+  }
+  if (fetchOneId){
+    fetchSingle(fetchOneId)
+  } else {
+    fetchTweets()
+  }
+
   $("#loadmore").click(function(event){
       event.preventDefault()
       if (nextTweetUrl) {
