--- a/tweets/templates/tweets/tweet_detail.html
+++ b/tweets/templates/tweets/tweet_detail.html
@@ -2,22 +2,29 @@
 {% extends "base.html" %}
 
 
+{% block script %}
+<script>
+$(document).ready(function(){
+  loadTweetContainer("tweet-container", {{ object.id }})
+});
+</script>
+{% endblock script %}
+
 {% block content %}
 <div class='row'>
     <div class='col-sm-3 col-xs-12' style='background-color:yellow;'>
         <h1>{{ object.user }} </h1>
     </div>
     <div class='col-sm-9 col-xs-12'>
-         {{ object.content }}<br/>
-            <br/>
-        {{ object.timestamp|timesince }}
+        <div id='tweet-container'>
+        </div>
     </div>
 
 </div>
 
 {% endblock content %}
 
-  
+
 
 
 
@@ -27,16 +34,16 @@
 
 <div class='row'>
     <div class='col-lg-3 col-md-6 col-sm-3 col-xs-12' style='background-color:red;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-md-6' >
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-xs-12' style='background-color:green;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-xs-12' style='background-color:blue;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
 </div>
 <br/>
@@ -47,34 +54,32 @@
 <br/>
 <div class='row'>
 
-    
+
       <div class='col-sm-1' style='background-color:red;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-sm-1' style='background-color:yellow;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-sm-1' style='background-color:green;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
 
     <div class='col-sm-1' style='background-color:blue;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
       <div class='col-sm-1' style='background-color:red;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-sm-1' style='background-color:yellow;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
     <div class='col-sm-1' style='background-color:green;'>
-        {{ object.user }}   
+        {{ object.user }}
     </div>
 
     <div class='col-sm-1' style='background-color:blue;'>
-        
+
     </div>
 
 </div>
-
-
